# knoll-tg-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: run_tests.sh
src/: main.py  prompts.py  tools.py
tests/: conftest.py  test_integration.py  test_main.py  test_prompts.py  test_tools.py  test_utils.py
