[project]
name = "knoll-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain-community>=0.3.27",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "wikipedia>=1.4.0",
]
